[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://art/UI/pause_menu/menu_hover.png" type="Texture" id=2]
[ext_resource path="res://art/UI/pause_menu/resume_hover.png" type="Texture" id=3]
[ext_resource path="res://art/UI/pause_menu/resume_pressed.png" type="Texture" id=4]
[ext_resource path="res://art/UI/pause_menu/menu_pressed.png" type="Texture" id=5]
[ext_resource path="res://art/UI/pause_menu/resume_normal.png" type="Texture" id=6]
[ext_resource path="res://art/UI/pause_menu/menu_normal.png" type="Texture" id=7]

[node name="pause_menu" type="Container"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="menu_button" type="TextureButton" parent="."]
pause_mode = 2
visible = false
margin_left = 150.0
margin_top = 110.0
margin_right = 246.0
margin_bottom = 158.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 2 )

[node name="resume_button" type="TextureButton" parent="."]
pause_mode = 2
visible = false
margin_left = 150.0
margin_top = 50.0
margin_right = 246.0
margin_bottom = 98.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )

[connection signal="button_up" from="menu_button" to="." method="go_to_main_menu"]
[connection signal="mouse_entered" from="menu_button" to="." method="set_focus" binds= [ 1 ]]
[connection signal="button_up" from="resume_button" to="." method="handle_pause_press"]
[connection signal="mouse_entered" from="resume_button" to="." method="set_focus" binds= [ 0 ]]
